istio-and-k8s/authorization-policies/service-policies/bonus-booklet-service-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "bonus-booklet-service-policy"
  namespace: default
spec:
  selector:
    matchLabels:
      app: bonus-booklet-service
  action: ALLOW
  rules:
    - to:
        - operation:
            methods: ["GET"]
            paths: ["/bonus-booklets/health"]
    - from:
        - source: # todo: principal rein oder raus?
            principals: [ "cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account" ]
      to:
        #    - to:
        - operation:
            methods: [ "POST" ]  # post  /:bonusBookletId/transactions?userId=${userId}
            paths: [ "*/transactions" ] # works
            # only exact-match, prefix or suffix are supported
            # paths: [ "/bonus-booklets/*/transactions" ] # does not work,
            # community requsted support of wildcards and regex, but these are currently not supported for path from istio
            # https://stackoverflow.com/questions/65706467/istio-authorizationpolicy-with-wildcard
            # https://github.com/istio/istio/issues/16585
    - to:
        - operation:
            methods: [ "POST" ]
            paths: [ "*/benefits" ]  # post /:bonusBookletId/benefits'
