istio-and-k8s/authorization-policies/service-policies/coupon-service-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "coupon-service-policy"
  namespace: default
spec:
  selector:
    matchLabels:
      app: coupon-service
  action: ALLOW
  rules:
# health endpoint only for test purposes
#    - to:
#        - operation:
#            methods: ["GET"]
#            paths: ["/coupons/health"]
#
# allow request from bonus-booklet- and benefit-service
    - from:
        - source:
            principals: [ "cluster.local/ns/default/sa/bonus-booklet-service" ]
        - source:
            principals: [ "cluster.local/ns/default/sa/benefit-service" ]
      to:
        - operation:
            methods: [ "POST" ]
            paths: [ "/coupons/create-coupon/*" ]  # like post /create-coupon/:userId
