istio-and-k8s/authorization-policies/service-policies/receipt-service-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "receipt-service-policy"
  namespace: default
spec:
  selector:
    matchLabels:
      app: receipt-service
  action: ALLOW
  rules:
    - to:
        - operation:
            methods: ["GET"]
            paths: ["/receipts/health"]
# note for next endpoint:
# from-condition for requestPrincipal (JWT "external-checkout-service") for next endpoint is already checked in ingress policy
   # note: service-accounts can be used as principals,
   # but service-entries cannot be used as principal (like external "checkout-service")
    -  to:
         - operation:
             methods: ["POST"]
             paths: ["/receipts/receipts"]
