istio-and-k8s/authorization-policies/service-policies/user-service-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "user-service-policy"
  namespace: default
spec:
  selector:
    matchLabels:
      app: user-service
  action: ALLOW
  rules:
    - from:
        - source:
            principals: [ "cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account" ]
      to:
        - operation:
            methods: [ "POST" ]
            paths: [ "/users/login" ]
        - operation:
            methods: [ "GET" ]
            paths: [ "/users/health" ]
        - operation:
            methods: [ "GET", "PATCH" ]
            paths: [ "/users/me" ]
    - from:
        - source:
            principals:  [ "cluster.local/ns/default/sa/opa" ]
      to:
        - operation:
            methods: [ "GET" ]
            paths: [ "/users/users-by-external-service-desk-id/*" ]  # like users-by-external-service-desk-id/:externalUserId/
        - operation:
            methods: [ "GET" ]
            paths: [ "/users/*" ]  # like users/:userId/
    - from:
        - source:
            principals: [ "cluster.local/ns/default/sa/bonus-booklet-service" ]
        - source:
            principals: [ "cluster.local/ns/default/sa/coupon-service" ]
      to:
        - operation:
            methods: [ "GET" ]
            paths: [ "/users/*" ]  # users/:userId/
            # could try to add in the future: maybe for booklet & coupon notPaths: [ "/users/users-by-external-service-desk-id/*" ]
